[tool.poetry]
name = "automated-network-inventory"
version = "0.1.0"
description = "This is a simple application to gather network device information using Ansible, store it in Nautobot, and generate a visual network diagram"
authors = ["reshma raghavan <u1430631@umail.utah.edu>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
ansible = "^10.1.0"
django = "^3.2.25"
python-dotenv = "^1.0.1"
graphviz = "^0.20.3"
networkx = "^3.3"
nautobot = "^2.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
